# warden-core

./: .dockerignore  .env.example  .gitignore  .semgrep.yml  .semgrepignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cli.py  docker-compose.example.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml
common/: agent_adapter.py  asset_paths.py  cli_engine_client.py  command_specs.py  compensation.py  compensation_context.py  config.py  contracts.py  db_startup.py  error_details.py  exceptions.py  execution_timing.py  execution_usage.py  governance.py  hitl_retry.py  models.py  outbox.py  outbox_reap.py  outbox_reap_loop.py  outbox_timestamps.py  policy_gate.py  processed_command_claim.py  processed_command_reap.py  prompts.py  resource_specs.py  retry.py  saga_assets.py  step_facts.py  step_output.py  step_when.py  telemetry.py  tool_failure.py  tool_results.py  topics.py  utils.py  worker_ref.py
common/llm/: __init__.py  protocol.py
common/messaging/: __init__.py  postgres.py  protocols.py
common/plugins/: __init__.py  context.py  loader.py  messaging_wire.py  noop.py  protocols.py  registry.py  tortoise_modules.py
common/policy/: __init__.py  cel_eval.py  loader.py
common/schemas/: engine_events.py  policy.py  saga.py  worker.py
config/: saga.github-demo.yaml  saga.minimal.yaml  saga.mock-mcp.yaml  worker.github-demo.yaml  worker.local-minimal.yaml  worker.minimal.yaml  worker.mock-mcp.yaml
config/policies/: github-issue-comment.yaml
config/prompts/: github-triage.j2  mock-greet.j2  mock-summarize.j2  noop.j2
config/schemas/: github-triage-output.json
db/migrations/: 000_initial_schema.sql  001_execution_usage.sql  002_max_step_tokens.sql
docs/: introduction.md
docs/advanced/: architecture.md  extending-warden.md  migrations-and-schema.md  testing.md
docs/concepts/: _category_.json  durable-execution.md  lifecycle.md  terminology.md
docs/getting-started/: configuration.md  demo-github-mcp.md  demo-mock-llm-and-mcp.md  demo-observe-execution-timing.md  demo-quickstart.md  installation.md  open-core-vs-enterprise.md  prerequisites.md  troubleshooting.md
docs/guides/: observability.md
engine/: Dockerfile  db.py  execution_timing.py  execution_usage.py  hitl_decisions.py  logic.py  main.py  recovery.py  recovery_errors.py  recovery_idempotency.py  utils.py
engine/api/: __init__.py  api.py  ids.py  pagination.py  read_queries.py  saga_start.py  schemas.py  step_serializers.py
engine/registry/: service.py
scripts/: check_open_core_boundary.sh  check_pyright.sh  check_xenon_kernel.sh  concat_docs.sh  export_openapi.py  generate_social_card.py  langgraph_react_spike.py  pyright_baseline.txt  run_migrations.py  xenon_grandfathered_blocks.txt
tests/: conftest.py  factories.py  worker_hydration_helpers.py
tests/fixtures/: dummy_plugin.py
tests/integration/: __init__.py  test_worker_engine_wiring.py
tests/live/: __init__.py  test_anthropic_live.py  test_openai_live.py
tests/postgres/: conftest.py  test_outbox_reap_paired.py  test_recovery_schema_migration.py
tests/unit/: conftest.py  test_adapters_langchain.py  test_agent_adapter.py  test_claim_reap_loop.py  test_cli_engine_client.py  test_cli_list_steps_errors.py  test_cli_show_step.py  test_cli_watch.py  test_common_llm_protocol.py  test_compensation_context.py  test_compensation_skip.py  test_compensation_validation.py  test_config.py  test_contracts.py  test_db_startup.py  test_engine_db.py  (+73 more)
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
workers/: Dockerfile  adapter_resolver.py  claim_reap.py  db.py  logic.py  main.py  resource_runtime.py  step_context.py  tools.py  utils.py
(+57 files in other folders)
